security improvements